got inventory side working for all api endpoints
