# backend/app.js
@@ -1,26 +1,22 @@
 const express = require('express');
 const bodyParser = require('body-parser');
 const mongodb = require('./db/connect');
-const userRoutes = require('./routes/user');
 
 const port = process.env.PORT || 8080;
 const app = express();
-
-const swaggerUi = require('swagger-ui-express');
-const swaggerDocument = require('./swagger.json');
-
-app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 app
 .use(bodyParser.json())
 .use((req, res, next) => {
 res.setHeader('Access-Control-Allow-Origin', '*');
-res.setHeader('Access-Control-Allow-Methods', 'OPTIONS, GET, POST, PUT, DELETE');
-res.setHeader('Access-Control-Allow-Headers', 'origin, x-Requested-With, Content-Type, Accept, z-Key');
 next();
 })
+.use('/', require('./routes'));
 
-.use('/user', userRoutes);
+// error handler
+process.on('uncaughtException', (err, origin) => {
+console.log(process.stderr.id, `Caught exception: ${err}\n`+ `Exception origin: ${origin}\n` );
+})
 
 mongodb.initDb((err) => {
     if (err) {
